--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,2 +1,68 @@
 @import "tailwindcss";
-@plugin "daisyui";
+@plugin "daisyui" {
+    themes: all;
+}
+
+@import "tailwindcss";
+
+/* 🪶 Rustic Roadway */
+@font-face {
+  font-family: "RusticRoadway";
+  src: url("/fonts/RusticRoadway.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* 🕊️ Angelos */
+@font-face {
+  font-family: "Angelos";
+  src: url("/fonts/Angelos.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* 🌸 Cameliya */
+@font-face {
+  font-family: "Cameliya";
+  src: url("/fonts/Cameliya.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* 🌌 Milkyway */
+@font-face {
+  font-family: "Milkyway";
+  src: url("/fonts/Milkyway DEMO.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* 🐓 Rooster */
+@font-face {
+  font-family: "Rooster";
+  src: url("/fonts/ROOSTER PERSONAL USE.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+/* 🎨 Register them with Tailwind v4’s theme system */
+@theme {
+  --font-rustic: "RusticRoadway", serif;
+  --font-angelos: "Angelos", cursive;
+  --font-cameliya: "Cameliya", cursive;
+  --font-milkyway: "Milkyway", cursive;
+  --font-rooster: "Rooster", cursive;
+}
+
+/* Add cursor pointer to buttons by default - this is coming from tailwind docs */
+@layer base {
+    button:not(:disabled),
+    [role="button"]:not(:disabled) {
+        cursor: pointer;
+    }
+}
